Fix height problems when items wrap on different lines

--- a/src/styles/IntroductionModal.css
+++ b/src/styles/IntroductionModal.css
@@ -26,7 +26,7 @@ li {
   justify-content: center;
   padding-top: 48px;
   width: 100vw;
-  height: 100svh;
+  height: 100%;
 }
 
 .inner-modal {
